- add global font to material theme - create test bonus component - add history path (normal) to the routes and create history component - create test function rate (simulate backend) - show how work input function in bonus component and how we can use it - add trackBy to bonus-list component - add resolveJsonModule compiler option to tsconfig to use json mocks

--- a/src/app/core/components/bonus-list/bonus-list.component.html
+++ b/src/app/core/components/bonus-list/bonus-list.component.html
@@ -1,3 +1,4 @@
-<div *ngFor="let bonus of bonuses" class="bonus-list">
-  <app-bonus-detail [bonus]="bonus" class="bonus-detail-component"></app-bonus-detail>
+<div *ngFor="let bonus of bonuses; trackBy: trackByFn" class="bonus-list">
+<!--  <app-bonus-detail [bonus]="bonus" class="bonus-detail-component"></app-bonus-detail>-->
+  <app-bonus [bonus]="bonus" [func]="bonusButtonClickFunc"></app-bonus>
 </div>
