--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,3 +1,3 @@
 <app-map-container></app-map-container>
-<app-bonus-list></app-bonus-list>
+<app-bonus-list [bonusButtonClickFunc]="applyBonus"></app-bonus-list>
 <router-outlet></router-outlet>
