--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,17 +1,17 @@
 <header>
   <nav>
-    <section class="logo" [routerLink]="['']">
+    <section class="logo" [routerLink]="['/home']">
       <img class="logo-img" src="assets/images/logo.png" alt="exadel logo" />
       <span class="logo-text">exadel bonus+</span>
     </section>
     <section class="menu-container" [ngClass]="{ hide: isMenuHide }">
-      <ul class="menu" appCloseMenu (clickMenuItem)="toggleMenu()" *ngIf="checkRoute()">
+      <ul class="menu" appCloseMenu (clickMenuItem)="toggleMenu()" [hidden]="checkRoute()">
         <li>
           <span class="login-as-label">{{ 'header.loginAs' | translate }}</span>
           <span class="login-as-text">{{ user?.first_name }} {{ user?.last_name }} </span>
         </li>
         <li class="menu-item">
-          <a [routerLink]="['']" [routerLinkActive]="'active'">{{
+          <a [routerLink]="['/home']" [routerLinkActive]="'active'">{{
             'header.findPlace' | translate
           }}</a>
         </li>
