--- a/src/app/shared/components/history/history.component.html
+++ b/src/app/shared/components/history/history.component.html
@@ -1,2 +1,2 @@
 <h1>History</h1>
-<app-bonus-list [bonusButtonClickFunc]="bonusButtonClicked"></app-bonus-list>
+<app-bonus-list-container [bonusButtonClickFunc]="bonusButtonClicked"></app-bonus-list-container>
