--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,4 +1,3 @@
 <app-map-container></app-map-container>
-<app-bonus-list [bonusButtonClickFunc]="applyBonus"></app-bonus-list>
-<app-bonus-list-container></app-bonus-list-container>
+<app-bonus-list-container [bonusButtonClickFunc]="applyBonus"></app-bonus-list-container>
 <router-outlet></router-outlet>
