--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -65,6 +65,8 @@ $exadelBonus-theme: mat-light-theme(
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-$custom-typography: mat-typography-config($font-family: 'Mulish');
+$custom-typography: mat-typography-config(
+  $font-family: 'Mulish',
+);
 @include angular-material-typography($custom-typography);
 @include angular-material-theme($exadelBonus-theme);
