add change place button to map

--- a/src/app/core/components/map/map-view/map-view.component.html
+++ b/src/app/core/components/map/map-view/map-view.component.html
@@ -3,4 +3,6 @@
   leaflet
   [leafletOptions]="options"
   (leafletMapReady)="onMapReady($event)"
-></div>
+>
+<button class="hello" (click)="changePlace()" icon><mat-icon>share_location</mat-icon></button>
+</div>
