--- a/src/app/core/components/choose-place-dialog/choose-place-dialog.component.html
+++ b/src/app/core/components/choose-place-dialog/choose-place-dialog.component.html
@@ -1,22 +1,20 @@
 <div class="dialog-container">
-  <mat-radio-group class="radio-group" aria-label="Select an option">
+  <mat-radio-group class="radio-group" aria-label="Select an option" [(ngModel)]="selectedPlaceDetection">
     <mat-radio-button
       class="radio-button"
       value="0"
-      [checked]="selectedPlaceDetection === 0"
     >
       Geolocation
     </mat-radio-button>
     <mat-radio-button
       class="radio-button"
       value="1"
-      [checked]="selectedPlaceDetection === 1"
       #officeOption
       >Choose office</mat-radio-button
     >
   </mat-radio-group>
   <mat-form-field appearance="fill">
-    <mat-select appearance="fill" [value]="selectedOffice" [disabled]="!officeOption.checked">
+    <mat-select appearance="fill" [disabled]="!officeOption.checked" [(ngModel)]="selectedOffice">
       <mat-option *ngFor="let office of offices; index as i" [value]="i">
         <p>
           {{ office.city }}
