--- a/src/app/core/components/choose-place-dialog/choose-place-dialog.component.html
+++ b/src/app/core/components/choose-place-dialog/choose-place-dialog.component.html
@@ -1,17 +1,11 @@
 <div class="dialog-container">
-  <mat-radio-group class="radio-group" aria-label="Select an option" [(ngModel)]="selectedPlaceDetection">
-    <mat-radio-button
-      class="radio-button"
-      value="0"
-    >
-      Geolocation
-    </mat-radio-button>
-    <mat-radio-button
-      class="radio-button"
-      value="1"
-      #officeOption
-      >Choose office</mat-radio-button
-    >
+  <mat-radio-group
+    class="radio-group"
+    aria-label="Select an option"
+    [(ngModel)]="selectedPlaceDetection"
+  >
+    <mat-radio-button class="radio-button" value="0"> Geolocation </mat-radio-button>
+    <mat-radio-button class="radio-button" value="1" #officeOption>Choose office</mat-radio-button>
   </mat-radio-group>
   <mat-form-field appearance="fill">
     <mat-select appearance="fill" [disabled]="!officeOption.checked" [(ngModel)]="selectedOffice">
