--- a/src/app/core/components/map/map-view/map-view.component.html
+++ b/src/app/core/components/map/map-view/map-view.component.html
@@ -1,8 +1,3 @@
-<div
-  style="height: 80vh"
-  leaflet
-  [leafletOptions]="options"
-  (leafletMapReady)="onMapReady($event)"
->
-<button class="hello" (click)="changePlace()" icon><mat-icon>share_location</mat-icon></button>
+<div style="height: 80vh" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
+  <button class="hello" (click)="changePlace()" icon><mat-icon>share_location</mat-icon></button>
 </div>
