--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,15 +1,15 @@
 <header>
   <nav class="nav-menu">
-    <section class="logo" [routerLink]="['/home']">
+    <section class="logo" [routerLink]="['']">
       <img class="logo-img" src="assets/images/logo.png" alt="exadel logo" />
       <span class="logo-text">exadel bonus+</span>
     </section>
-    <div class="language-switcher" [class.isLogout]="!checkRoute()">
+    <div class="language-switcher" [class.isLogout]="!ifShowMenuButtons">
       <button class="language-switcher-button" mat-mini-fab appLanguageSwitcher color="primary">
         {{ language }}
       </button>
     </div>
-    <div *ngIf="checkRoute()">
+    <ng-container *ngIf="ifShowMenuButtons">
       <section class="menu-container" [ngClass]="{ hide: isMenuHide }">
         <ul class="menu" appCloseMenu (clickMenuItem)="toggleMenu()">
           <li>
@@ -55,6 +55,6 @@
       >
         <mat-icon>menu</mat-icon>
       </button>
-    </div>
+    </ng-container>
   </nav>
 </header>
