return redurect to home

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="nav-menu">
-    <section class="logo" [routerLink]="['']">
+    <section class="logo" [routerLink]="['/home']">
       <img class="logo-img" src="assets/images/logo.png" alt="exadel logo" />
       <span class="logo-text">exadel bonus+</span>
     </section>
