--- a/src/app/core/components/add-bonus/add-bonus.component.html
+++ b/src/app/core/components/add-bonus/add-bonus.component.html
@@ -6,5 +6,6 @@
     (closeForm)="closeForm()"
     [locations]="locations"
     [vendors]="vendors"
+    (vendorNameChange)="vendorNameChange($event)"
   ></app-add-bonus-form>
 </div>
