--- a/src/app/core/components/add-bonus/add-bonus.component.html
+++ b/src/app/core/components/add-bonus/add-bonus.component.html
@@ -7,5 +7,6 @@
     [locations]="locations"
     [vendors]="vendors"
     (vendorNameChange)="vendorNameChange($event)"
+    (createNewVendor)="createNewVendor($event)"
   ></app-add-bonus-form>
 </div>
