--- a/src/app/core/components/add-bonus/add-bonus-form/add-bonus-form.component.html
+++ b/src/app/core/components/add-bonus/add-bonus-form/add-bonus-form.component.html
@@ -14,6 +14,7 @@
         formControlName="vendorName"
         [matAutocomplete]="auto"
         (ngModelChange)="onVendorNameChange($event)" 
+        (blur)="onGetNewVendor($event)"
       />
       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
         <mat-option *ngFor="let vendor of filteredVendors | async" [value]="vendor">
