--- a/src/app/core/components/add-bonus/add-bonus.component.html
+++ b/src/app/core/components/add-bonus/add-bonus.component.html
@@ -6,6 +6,7 @@
     (closeForm)="closeForm()"
     [locations]="locations"
     [vendors]="vendors"
+    [newVendor]="newVendor"
     (vendorNameChange)="vendorNameChange($event)"
     (createNewVendor)="createNewVendor($event)"
   ></app-add-bonus-form>
