--- a/src/app/core/components/add-bonus/add-bonus-form/add-bonus-form.component.scss
+++ b/src/app/core/components/add-bonus/add-bonus-form/add-bonus-form.component.scss
@@ -10,6 +10,7 @@
 
 .add-bonus-input {
   width: 260px;
+  position: relative;
 
   &--description {
     textarea {
@@ -38,4 +39,22 @@
 .form-btn-back-container {
   width: 100%;
   text-align: center;
+}
+
+.new-vendor-btn {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  font-size: 25px;
+  line-height: 1;
+  right: 0px;
+  bottom: 10px;
+  padding: 1px;
+  border-radius: 50% 50% 50% 50%;
+  border: 2px solid #0082ca;
+  color: #0082ca;
+}
+
+.vendor-info-btn {
+  margin-bottom: 20px;
 }
