--- a/src/app/core/components/add-bonus/add-bonus.component.html
+++ b/src/app/core/components/add-bonus/add-bonus.component.html
@@ -3,6 +3,7 @@
   <app-add-bonus-form
     *ngIf="isFormActive"
     (addAddress)="addAddress($event)"
+    (createBonus)="createBonus($event)"
     (closeForm)="closeForm()"
     [locations]="locations"
     [vendors]="vendors"
