--- a/src/app/features/home/map/map-container/map-container.component.html
+++ b/src/app/features/home/map/map-container/map-container.component.html
@@ -1,1 +1,1 @@
-<app-map-view (mapReady)="mapReadyEvent($event)"></app-map-view>
+<app-map-view (changePlaceEvent)="changePlace()" (mapReady)="mapReadyEvent($event)"></app-map-view>
