--- a/src/app/features/home/map/map-view/map-view.component.html
+++ b/src/app/features/home/map/map-view/map-view.component.html
@@ -3,4 +3,11 @@
   leaflet
   [leafletOptions]="options"
   (leafletMapReady)="onMapReady($event)"
-></div>
+>
+<button 
+class="change-location-button" 
+(click)="changePlace()" 
+icon>
+  <mat-icon>share_location</mat-icon>
+</button>
+</div>
