--- a/src/app/features/home/map/map-view/map-view.component.html
+++ b/src/app/features/home/map/map-view/map-view.component.html
@@ -1,13 +1,5 @@
-<div
-  style="height: 50vh"
-  leaflet
-  [leafletOptions]="options"
-  (leafletMapReady)="onMapReady($event)"
->
-<button 
-class="change-location-button" 
-(click)="changePlace()" 
-icon>
-  <mat-icon>share_location</mat-icon>
-</button>
+<div style="height: 50vh" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
+  <button class="change-location-button" (click)="changePlace()" icon>
+    <mat-icon>share_location</mat-icon>
+  </button>
 </div>
