--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -42,7 +42,7 @@
             }}</a>
           </li>
           <li class="menu-item">
-            <a (click)="logout()">{{ 'header.signOut' | translate }}</a>
+            <a (click)="logout()" class="sing-out">{{ 'header.signOut' | translate }}</a>
           </li>
         </ul>
       </section>
