change menu items

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -32,13 +32,8 @@
             }}</a>
           </li>
           <li class="menu-item">
-            <a [routerLink]="['bonuses']" [routerLinkActive]="'active'">{{
-              'header.bonuses' | translate
-            }}</a>
-          </li>
-          <li class="menu-item">
-            <a [routerLink]="['users']" [routerLinkActive]="'active'">{{
-              'header.user' | translate
+            <a [routerLink]="['statistics']" [routerLinkActive]="'active'">{{
+              'header.statistics' | translate
             }}</a>
           </li>
           <li class="menu-item">
