--- a/src/app/features/add-bonus/add-bonus-button/add-bonus-button.component.scss
+++ b/src/app/features/add-bonus/add-bonus-button/add-bonus-button.component.scss
@@ -1,5 +1,17 @@
 .add-bonus-btn-container {
+  text-align: center;
   width: 100%;
   margin: 0 auto;
-  text-align: center;
+}
+
+.add-btn {
+  width: 150px;
+  height: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
+
+  @media screen and (min-width: 1280px) {
+    width: 220px;
+  }
 }
