--- a/src/styles/adaptive-screen.scss
+++ b/src/styles/adaptive-screen.scss
@@ -2,11 +2,11 @@
   width: 280px;
   margin: 0 auto;
 
-  @media screen and (width: 768px) {
+  @media screen and (min-width: 768px) {
     width: 688px;
   }
 
-  @media screen and (width: 1280px) {
+  @media screen and (min-width: 1280px) {
     width: 1210px;
   }
 }
