create component to rate bonus

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,5 @@
 <app-map-container></app-map-container>
+<app-datepicker></app-datepicker>
 <app-bonus-list-container></app-bonus-list-container>
+<app-rate></app-rate>
 <router-outlet></router-outlet>
