--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -1,11 +1,11 @@
-<ng-container *ngIf="isMobile">
-  <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Filter">Filter Component</mat-tab>
-    <mat-tab label="Sorting">Sorting Component</mat-tab>
-  </mat-tab-group>
-</ng-container>
-
-<ng-container *ngIf="!isMobile">
-  <p>Filter Component Desktop</p>
-  <p>Sorting Component Desktop</p>
-</ng-container>
+  <ng-container appResize [hidden]="visible" (window:resize)="onResize($event)" >
+    <mat-tab-group mat-align-tabs="center">
+      <mat-tab label="Filter">Filter Component</mat-tab>
+      <mat-tab label="Sorting">Sorting Component</mat-tab>
+    </mat-tab-group>
+  </ng-container>
+  
+  <ng-container appResize [hidden]="!visible" (window:resize)="onResize($event)" >
+    <p>Filter Component Desktop</p>
+    <p>Sorting Component Desktop</p>
+  </ng-container>
