--- a/src/app/features/add-bonus/add-bonus-form/add-bonus-form.component.html
+++ b/src/app/features/add-bonus/add-bonus-form/add-bonus-form.component.html
@@ -45,7 +45,7 @@
       mat-flat-button
       color="primary"
       type="button"
-      (click)="onSaveNewVendor($event)"
+      (click)="onSaveNewVendor()"
     >
       {{ 'addBonus.form.saveNewVendorBtn' | translate }}
     </button>
