--- a/src/app/features/add-bonus/add-bonus.component.html
+++ b/src/app/features/add-bonus/add-bonus.component.html
@@ -2,7 +2,7 @@
   <app-add-bonus-button *ngIf="!isFormActive" (openForm)="openForm()"></app-add-bonus-button>
   <app-add-bonus-form
     *ngIf="isFormActive"
-    [bonusFormConfig]="this"
+    [bonusFormConfig]="bonusFormConfig"
     [locations]="locations"
     [vendors]="vendors"
     [newVendor]="newVendor"
