--- a/src/app/shared/components/rating/stars/start.component.scss
+++ b/src/app/shared/components/rating/stars/start.component.scss
@@ -18,10 +18,10 @@
   height: 40px;
   .curtain {
     height: 40px;
-    background-color: #FFF;
+    background-color: #fff;
     position: absolute;
     z-index: 2;
-    right:0;
+    right: 0;
   }
   .stars {
     width: 100px;
