--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -1,11 +1,12 @@
-  <ng-container appResize [hidden]="visible" (window:resize)="onResize($event)" >
+  <ng-template [onlyForScreen]="'mobile'" >
     <mat-tab-group mat-align-tabs="center">
       <mat-tab label="Filter">Filter Component</mat-tab>
       <mat-tab label="Sorting">Sorting Component</mat-tab>
     </mat-tab-group>
-  </ng-container>
+  </ng-template>
   
-  <ng-container appResize [hidden]="!visible" (window:resize)="onResize($event)" >
-    <p>Filter Component Desktop</p>
-    <p>Sorting Component Desktop</p>
-  </ng-container>
+  <ng-template [onlyForScreen]="'desktop'">
+    <p>Filter Component</p>
+    <p>Sorting Component</p>
+  </ng-template>
+
