--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,3 @@
 <app-map-container></app-map-container>
-<app-datepicker></app-datepicker>
-<app-bonus-list-container></app-bonus-list-container>
-<app-rate></app-rate>
+<app-bonus-list-container [onBonusButtonClick]="onBonusButtonClick"></app-bonus-list-container>
 <router-outlet></router-outlet>
