--- a/src/app/shared/components/rating/rate/rate.component.html
+++ b/src/app/shared/components/rating/rate/rate.component.html
@@ -1,14 +1,16 @@
 <div class="discount-row">
   <ng-content *ngIf="!isForm"></ng-content>
-  <app-stars [widthValue]="this.rating"></app-stars>
+  <app-stars [widthValue]="bonus.rating * 10"></app-stars>
 </div>
 <div *ngIf="isForm">
   <mat-slider
     class="slider"
     tickInterval="1"
     min="0"
-    max="10000"
-    (input)="onMatSliderChange($event)">
+    max="100"
+    (input)="onMatSliderChange($event)"
+    [value]="startPosition"
+    >
   </mat-slider>
   <button
     class="" color="primary"
