--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -40,9 +40,10 @@
 
 .discount-value {
   color: #404040;
-  font-size: 22px;
+  font-size: 16px;
   font-weight: bold;
   padding: 5px;
+  width: 195px;
 }
 
 .bonus-name {
