fix bonuses style

--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -8,7 +8,7 @@
       <img class="discount-icon" src="assets/icons/discount-icon.svg" alt="discount" />
       <span class="discount-value">{{ bonus.title }}</span>
     </app-rate>
-    <div *ngIf="!isForm">
+    <div *ngIf="!isForm" class="interactive-container">
       <div>
         <div class="bonus-name">{{ bonus.type }}</div>
         <div class="tags">
