--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -17,6 +17,15 @@
   font-weight: 500;
   padding: 8px 5px;
   margin-left: -1px;
+  overflow-y: auto;
+  border-right: 5px solid $theme-color;
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 5px;
+  }
   .vendor-name {
     text-decoration: underline;
     font-style: normal;
@@ -29,9 +38,11 @@
 }
 
 .bonus-content {
+  display: block;
+  position: relative;
   flex: 1 1 66.666666%;
-  justify-content: space-between;
   padding: 6px;
+  height: 100%;
 }
 
 .discount-icon {
@@ -44,6 +55,7 @@
   font-weight: bold;
   padding: 5px;
   width: 195px;
+  display: inline-flex;
 }
 
 .bonus-name {
@@ -54,7 +66,7 @@
 }
 
 .tags {
-  margin-top: 20px;
+  margin-top: 15px;
   width: 320px;
   height: 28px;
   padding: 3px;
@@ -93,6 +105,6 @@
 }
 
 .button-container {
-  margin-top: 26px;
-  padding-right: 2px;
+  height: 42px;
+  margin-top: 10px;
 }
