--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -1,8 +1,8 @@
-<ng-template [appResize]="'mobile'">
+<!-- <ng-template [appResize]="'mobile'">
   <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Filter">Filter Component</mat-tab>
     <mat-tab label="Sorting">Sorting Component</mat-tab>
-  </mat-tab-group>
+ 
 </ng-template>
 
 <ng-template [appResize]="'desktop'">
@@ -10,4 +10,16 @@
     <p>Filter Component</p>
     <p>Sorting Component</p>
   </div>
+</ng-template> -->
+
+<mat-tab-group mat-align-tabs="center">
+
+<ng-template [appResizePick]="'Filter'">
+  <p>Filter Component</p>
 </ng-template>
+
+<ng-template [appResizePick]="'Sort'">
+  <p>Sorting Component</p>
+</ng-template>
+
+</mat-tab-group>
