delete resize directive

--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -1,8 +1,7 @@
-<!-- <ng-template [appResize]="'mobile'">
+<ng-template [appResize]="'mobile'">
   <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Filter">Filter Component</mat-tab>
     <mat-tab label="Sorting">Sorting Component</mat-tab>
- 
 </ng-template>
 
 <ng-template [appResize]="'desktop'">
@@ -10,16 +9,4 @@
     <p>Filter Component</p>
     <p>Sorting Component</p>
   </div>
-</ng-template> -->
-
-<mat-tab-group mat-align-tabs="center">
-
-<ng-template [appResizePick]="'Filter'">
-  <p>Filter Component</p>
 </ng-template>
-
-<ng-template [appResizePick]="'Sort'">
-  <p>Sorting Component</p>
-</ng-template>
-
-</mat-tab-group>
