--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -11,7 +11,11 @@
 
 <ng-template [appResizePick]="'desktop'">
   <div class="pick-desktop">
-    <app-filter-container></app-filter-container>
-    <app-sort-container></app-sort-container>
+    <div>
+      <app-filter-container></app-filter-container>
+    </div>
+    <div>
+      <app-sort-container></app-sort-container>
+    </div>
   </div>
 </ng-template>
