--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -1,8 +1,14 @@
 <mat-radio-group class="radio-group" text-align="right">
-  <mat-radio-button class="radio-button" value="byTitle" labelPosition="before">
+  <mat-radio-button class="radio-button" value="title" labelPosition="before">
     Alphabetically by title
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="byCompany" labelPosition="before">
+  <mat-radio-button class="radio-button" value="company" labelPosition="before">
     Alphabetically by company
+  </mat-radio-button>
+  <mat-radio-button class="radio-button" value="dateStart" labelPosition="before">
+    By bonus date start
+  </mat-radio-button>
+  <mat-radio-button class="radio-button" value="dateEnd" labelPosition="before">
+    By bonus date end
   </mat-radio-button>
 </mat-radio-group>
