--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,4 @@
 <app-map-container></app-map-container>
 <app-bonus-list-container></app-bonus-list-container>
 <router-outlet></router-outlet>
+<app-filter-container></app-filter-container>
