--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -18,7 +18,7 @@
           </li>
           <li class="menu-item">
             <a [routerLink]="['/home']" [routerLinkActive]="'active'">{{
-              'header.findPlace' | translate
+              'header.home' | translate
             }}</a>
           </li>
           <li class="menu-item">
@@ -27,8 +27,8 @@
             }}</a>
           </li>
           <li class="menu-item">
-            <a [routerLink]="['add-bonus']" [routerLinkActive]="'active'">{{
-              'header.addBonus' | translate
+            <a [routerLink]="['bonuses']" [routerLinkActive]="'active'">{{
+              'header.bonuses' | translate
             }}</a>
           </li>
           <li class="menu-item">
