--- a/src/app/features/home/map/map-view/map-view.component.html
+++ b/src/app/features/home/map/map-view/map-view.component.html
@@ -1,4 +1,8 @@
-<div style="height: 50vh" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
+<div 
+  style="height: 50vh" 
+  leaflet [leafletOptions]="options" 
+  (leafletMapReady)="onMapReady($event)"
+  (leafletMapZoom)="onMapZoom()">
   <button class="change-location-button" (click)="changePlace()" icon>
     <mat-icon>share_location</mat-icon>
   </button>
