--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -1,13 +1,14 @@
-<ng-template [appResizePick]="'mobile'">
+<div appResizePick='mobile'>
+  <ng-container>
   <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Filter">Filter Component</mat-tab>
     <mat-tab label="Sorting">Sorting Component</mat-tab>
-  </mat-tab-group>
-</ng-template>
+  </mat-tab-group></ng-container>
+</div>
 
-<ng-template [appResizePick]="'desktop'">
+<div appResizePick='desktop'>
   <div class="pick-desktop">
     <p>Filter Component</p>
     <p>Sorting Component</p>
   </div>
-</ng-template>
+</div>
