add styles to bonus list and component

--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
@@ -1,2 +1,2 @@
 <app-bonus [bonus]="bonusMap" [bonusButtonClick]="onBonusButtonClick" *ngIf="bonusMap"></app-bonus>
-<app-bonus-list-view [bonuses]="bonuses" [onBonusButtonClick]="onBonusButtonClick"></app-bonus-list-view>
+<app-bonus-list-view [bonuses]="bonuses" [onBonusButtonClick]="onBonusButtonClick" class="bonuses"></app-bonus-list-view>
