--- a/src/app/features/statistics/statistics.component.html
+++ b/src/app/features/statistics/statistics.component.html
@@ -1,6 +1,6 @@
 <div class="mat-elevation-z8 table-container">
   <mat-form-field>
-    <mat-label>Filter</mat-label>
+    <mat-label>{{'statistics.filter' | translate}}</mat-label>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="" />
   </mat-form-field>
 
@@ -11,57 +11,79 @@
     </ng-container>
 
     <ng-container matColumnDef="vendor">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Vendor </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.vendor' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.vendor }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="bonus">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Bonus </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.bonus' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.bonus }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="dateAdd">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Add date </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.dateAdd' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.dateAdd }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="dateStart">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Start </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.dateStart' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.dateStart }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="dateEnd">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> End </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.dateEnd' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.dateEnd }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="rating">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Rating </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.rating' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.rating }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="visits">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Visits </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.visits' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.visits }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="city">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> City </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.city' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.city }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="country">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Country </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.country' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.country }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="type">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Type </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.type' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.type }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="isActive">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Is active </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'statistics.isActive' | translate }}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.isActive }} </mat-cell>
     </ng-container>
 
