--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -1,11 +1,9 @@
 <div appResizePick="mobile">
   <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="{{ 'home.pick.labelFilter'  | translate }}">
+    <mat-tab label="{{ 'home.pick.labelFilter' | translate }}">
       <app-filter-container></app-filter-container>
     </mat-tab>
-    <mat-tab label="{{ 'home.pick.labelSorting'  | translate }}">
-      Sorting component
-    </mat-tab>
+    <mat-tab label="{{ 'home.pick.labelSorting' | translate }}"> Sorting component </mat-tab>
   </mat-tab-group>
 </div>
 
