add translate, merge develop

--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -1,9 +1,9 @@
 <ng-template [appResizePick]="'mobile'">
   <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Filter">
+    <mat-tab label="{{ 'home.pick.labelFilter' | translate }}">
       <app-filter-container></app-filter-container>
     </mat-tab>
-    <mat-tab label="Sorting">
+    <mat-tab label="{{ 'home.pick.labelFilter' | translate }}">
       <app-sort-container></app-sort-container>
     </mat-tab>
   </mat-tab-group>
