--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -1,14 +1,14 @@
 <mat-radio-group class="radio-group" text-align="right">
   <mat-radio-button class="radio-button" value="title" labelPosition="before">
-    Alphabetically by title
+    {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="company" labelPosition="before">
-    Alphabetically by company
+    {{ 'home.pick.sorting.byCompany' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="dateStart" labelPosition="before">
-    By bonus date start
+    {{ 'home.pick.sorting.byDateStart' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="dateEnd" labelPosition="before">
-    By bonus date end
+    {{ 'home.pick.sorting.byDateEnd' | translate }}
   </mat-radio-button>
 </mat-radio-group>
